--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
 # If you would like to upload your .git directory, .gitignore file or files
 # from your .gitignore file, remove the corresponding line
 # below:
-.git
+#.git
 .gitignore
 .github
-.cache
+#.cache
 
 node_modules/
 yarn.lock
